--- a/src/components/SearchField.module.css
+++ b/src/components/SearchField.module.css
@@ -16,7 +16,7 @@
   text-align: left;
   color: rgb(81, 77, 77);
   font-size: clamp(0.8rem, 1.1vw, 1.2em);
-  font-family: ;
+  font-family: "Inter", sans-serif;
 }
 
 .searchContainer input:focus {
