--- a/src/components/Weather.module.css
+++ b/src/components/Weather.module.css
@@ -7,9 +7,32 @@
   gap: 4rem;
   padding: 3%;
   min-width: 15em;
-  min-height: 20em;
+  max-height: auto;
   background: linear-gradient(#15ab9c68, #09116b4d);
   border-radius: 12px;
   border: 1px solid #ffffff37;
   box-shadow: 0px 0px 3px 0px #fff;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+.cityInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+}
+
+.cityTemperature {
+  font-size: clamp(1.1rem, 3vw, 3em);
+}
+
+.cityName {
+}
+.otherInfo {
+}
+
+.humidity {
+}
+.wind {
 }
