--- a/src/components/Weather.module.css
+++ b/src/components/Weather.module.css
@@ -1,38 +1,122 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   box-sizing: border-box;
-  gap: 4rem;
-  padding: 3%;
-  min-width: 15em;
-  max-height: auto;
+  gap: 2rem;
+  padding: 10%;
+  width: 200px;
+  max-height: 500px;
   background: linear-gradient(#15ab9c68, #09116b4d);
   border-radius: 12px;
   border: 1px solid #ffffff37;
   box-shadow: 0px 0px 3px 0px #fff;
-  box-sizing: border-box;
+  box-sizing: content-box;
   overflow: hidden;
 }
+
 .cityInfo {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   color: #fff;
+  min-width: 100%;
+  min-height: 15rem;
 }
-
+.weatherIcon {
+  position: relative;
+  top: 10%;
+}
 .cityTemperature {
-  font-size: clamp(1.1rem, 3vw, 3em);
+  top: 43%;
+  position: absolute;
+  margin: 0;
+  font-size: clamp(2.4rem, 3vw, 2em);
 }
 
 .cityName {
+  font-size: clamp(1.6rem, 2vw, 2em);
+  font-family: "Inter", sans-serif;
+  text-align: center;
 }
 .otherInfo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: #55525214;
+  border: 1px solid #ffffff59;
+  border-radius: 12px;
+  box-shadow: 0 0 0.2rem #fff;
+  gap: 3rem;
+  margin-top: 2%;
+  padding: 20px 10px;
 }
 
 .humidity {
+  margin: 0;
 }
+
 .wind {
+  margin: 0;
+}
+.weatherIcon {
+  padding-right: 5px;
+  scale: 1.2;
+}
+
+.wrongCity {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 60%;
+}
+.wrongCity img {
+  width: 40%;
+  color: #fff;
+}
+
+@media screen and (max-width: 450px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 2rem;
+    padding: 0%;
+    height: auto;
+    min-width: 80vw;
+    background: linear-gradient(#15ab9c68, #09116b4d);
+    border-radius: 12px;
+    border: 1px solid #ffffff37;
+    box-shadow: 0px 0px 3px 0px #fff;
+    box-sizing: border-box;
+  }
+
+  .cityInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  .cityName {
+    margin-bottom: 4px;
+  }
+  .cityTemperature {
+    top: auto;
+    margin: 0;
+    font-size: clamp(2.4rem, 3vw, 3em);
+  }
+  .otherInfo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+    margin-bottom: 4%;
+    padding-bottom: 10px;
+  }
 }
