--- a/src/components/Weather.module.css
+++ b/src/components/Weather.module.css
@@ -6,8 +6,8 @@
   box-sizing: border-box;
   gap: 2rem;
   padding: 10%;
-  width: 200px;
-  max-height: 500px;
+  width: fit-content;
+  max-height: fit-content;
   background: linear-gradient(#15ab9c68, #09116b4d);
   border-radius: 12px;
   border: 1px solid #ffffff37;
@@ -87,8 +87,8 @@
     align-items: center;
     gap: 2rem;
     padding: 0%;
-    height: auto;
-    min-width: 80vw;
+    min-height: 90vh;
+    min-width: 90vw;
     background: linear-gradient(#15ab9c68, #09116b4d);
     border-radius: 12px;
     border: 1px solid #ffffff37;
